--- a/templates/index.html
+++ b/templates/index.html
@@ -1,10 +1,22 @@
 <!doctype html>
 <html lang="en">
     <head>
+    	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}" />    
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/leaflet/0.7.7/leaflet.css" />
         <script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet/0.7.7/leaflet.js"></script>    	
     </head>
     <body>
+        <nav>
+            <a href="http://first-news-app.readthedocs.org/">
+            </a>
+        </nav>
+        <header>
+            <h1>These are the 60 people who died during the L.A. riots</h1>
+            <div class="byline">
+                By <a href="http://first-news-app.readthedocs.org/">The First News App Tutorial</a>
+            </div>
+        </header>    
         <div id="map" style="width:100%; height:300px;"></div>    
         <h1>LA Riots</h1>
         <table border=1 cellpadding=7>
